--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fish-type-js",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "Runtime dynamic type validation in function calls.",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,10 @@
   },
   "author": "Damian Cipolat",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url" : "https://github.com/damiancipolat/Fish-type-JS"
+  },
   "dependencies": {
     "joi": "^14.3.1"
   }
