--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Runtime dynamic type validation in function calls.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node welcome.js"
   },
   "author": "Damian Cipolat",
   "license": "MIT",
